--- a/SomeTestCode/pom.xml
+++ b/SomeTestCode/pom.xml
@@ -43,5 +43,12 @@
 			<version>3.9</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>28.1-jre</version>
+		</dependency>
+
 	</dependencies>
 </project>
