--- a/SomeTestCode/pom.xml
+++ b/SomeTestCode/pom.xml
@@ -50,5 +50,11 @@
 			<version>28.1-jre</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.6</version>
+		</dependency>
 	</dependencies>
 </project>
